@@ -1,16 +1,18 @@
 package telnet;
 
 import commons.CommonRails;
+import commons.socket.SocketUtils;
+import exceptions.ExceptionHandler;
 
 public class TelnetOutputBuilder extends Thread
 {
-    public TelnetCommunicationProxy telnet_communication_proxy;
+    public TelnetCommunicationProxy TELNET_COMMUNICATION_PROXY;
 
-    public TelnetMessageQueue telnet_message_queue = new TelnetMessageQueue(5000);
+    public TelnetMessageQueue TELNET_MESSAGE_QUEUE = new TelnetMessageQueue(5000);
 
-    public TelnetOutputBuilder(TelnetCommunicationProxy telnet_communication_proxy)
+    public TelnetOutputBuilder(final TelnetCommunicationProxy TELNET_COMMUNICATION_PROXY)
     {
-        this.telnet_communication_proxy = telnet_communication_proxy;
+        this.TELNET_COMMUNICATION_PROXY = TELNET_COMMUNICATION_PROXY;
     }
 
     @Override
@@ -18,7 +20,7 @@ public class TelnetOutputBuilder extends Thread
     {
         while(true)
         {
-            TelnetMessageQueue queue = this.telnet_message_queue;
+            TelnetMessageQueue queue = this.TELNET_MESSAGE_QUEUE;
 
             try
             {
@@ -29,35 +31,38 @@ public class TelnetOutputBuilder extends Thread
                         try { queue.wait(); } catch (InterruptedException ie) { Thread.currentThread().interrupt(); return; }
                     }
 
-                    while (queue.messages.size() > 0)
+                    while (queue.MESSAGES.size() > 0)
                     {
                         try
                         {
-                            final TelnetMessageQueue.Message message = queue.messages.get(0);
+                            final TelnetMessageQueue.Message message = queue.MESSAGES.get(0);
 
-                            final String value = message.message_buffer.toString();
+                            final String value = message.MESSAGE_BUFFER.toString();
 
-                            final TelnetCommunicationProxy proxy = this.telnet_communication_proxy;
+                            final TelnetCommunicationProxy proxy = this.TELNET_COMMUNICATION_PROXY;
 
                             if(!value.isEmpty())
                             {
-                                CommonRails.printSystemComponent(this, this.hashCode(), "TelnetOutputBuilder Output >> sending message ["+message+"]");
+                                CommonRails.printSystemComponent(this, this.hashCode(), ". TelnetOutputBuilder Output >> sending message ["+value+"] .");
 
-                                proxy.writer.write(value);
+                                if(proxy.process != null && proxy.process.isAlive() && proxy.writer != null)
+                                {
+                                    proxy.writer.write(value);
+                                    proxy.writer.flush();
+                                }
 
-                                proxy.writer.flush();
-
-                                queue.messages.remove(0);
+                                queue.MESSAGES.removeFirst();
                             }
                             else
                             {
-                                CommonRails.printSystemComponent(this, this.hashCode(), "TelnetOutputBuilder Output >> removing sorted-simple message.");
+                                CommonRails.printSystemComponent(this, this.hashCode(), ". TelnetOutputBuilder Output >> removing sorted-simple message .");
 
-                                queue.messages.remove(0);
+                                queue.MESSAGES.remove(0);
                             }
                         }
                         catch (Exception e)
                         {
+                            ExceptionHandler.dispatch(e);
                             e.printStackTrace(System.err);
                         }
                     }
@@ -65,6 +70,7 @@ public class TelnetOutputBuilder extends Thread
             }
             catch (Exception e)
             {
+                ExceptionHandler.dispatch(e);
                 e.printStackTrace(System.err);
             }
         }
